--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,10 +17,11 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 2rem 0;
+  padding: 0.5rem 0;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
+  color:rgb(180, 180, 180);
 }
 
 .footer a {
@@ -45,6 +46,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-weight: 600;
 }
 
 .title,
@@ -62,6 +64,7 @@
   -moz-animation: flow 30s ease infinite;
   -webkit-background-clip: text;
   background-clip: text;
+  box-decoration-break: clone;
   -webkit-text-fill-color: transparent;
   -webkit-box-decoration-break: clone;
 }
@@ -70,6 +73,10 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+}
+
+.intro {
+  padding: 5%;
 }
 
 .code {
@@ -101,6 +108,10 @@
   max-width: 300px;
 }
 
+.card > p {
+  color: rgb(109, 109, 109);
+}
+
 .card:hover,
 .card:focus,
 .card:active {
@@ -120,8 +131,9 @@
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  height: 2.2em;
+  margin-left: 0.2rem;
+  margin-right: 0.1rem;
 }
 
 @media (max-width: 600px) {
