--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,6 +17,7 @@
 .navbar {
   width: 100%;
   padding-bottom: 4%;
+  overflow: hidden;
 }
 
 .navbar > ul > li {
@@ -24,7 +25,7 @@
   margin-right: 3%;
 }
 
-.navbar > ul > li:hover {
+.navbar > ul > li > a:hover {
   text-decoration: underline;
 }
 
