--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,7 +60,7 @@
 .footer {
   display: flex;
   flex: 1;
-  padding: 0.5rem 0;
+  padding: 1rem;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
