remove social SVGs in footer and use simple a tag

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -68,10 +68,7 @@
 }
 
 .footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+  text-decoration: underline;
 }
 
 .title {
